Completado el proceso de envío y firma